修改版加入less写法

--- a/纯css点赞.html
+++ b/纯css点赞.html
@@ -4,8 +4,41 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
-  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   <style>
+  /*  less 写法
+     ul{
+      padding 0;
+      &:hover > li {
+        .fa-star-o{
+        color:pink;
+        display: none;
+        }
+        .fa-star{
+        color:red;
+        display: inline-block;
+        }
+      }
+    
+      li{
+      float:left;
+      display: inline-block;
+      font-size: 60px;
+      cursor: pointer;
+        .fa-star{
+        display: none;
+        }
+    
+        &:hover ~ li {
+          .fa-star {
+          display: none;
+          }
+          .fa-star-o {
+          display: inline-block;
+          }
+        }
+      }
+    } */
     ul{
     padding 0;
     }
