--- a/纯css点赞.html
+++ b/纯css点赞.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>JS23333</title>
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   <style>
   /*  less 写法
@@ -40,7 +40,8 @@
       }
     } */
     ul{
-    padding 0;
+    padding:0;
+    list-style: none;
     }
     li{
     float:left;
